# csv-diff-cli

./: .gitignore  README.md  pyproject.toml
csv_diff/: alias.py  alias_cli.py  annotate.py  audit.py  audit_cli.py  baseline.py  bucket.py  bucket_cli.py  cadence.py  cadence_cli.py  cast.py  checkpoint.py  clamp.py  cli.py  cluster.py  cluster_cli.py  coalesce.py  color.py  compare.py  compare_cli.py  context.py  correlation.py  correlation_cli.py  dedupe.py  dedupe_cli.py  diff.py  drift.py  drift_cli.py  export.py  filter.py  fingerprint.py  flatten.py  forecast.py  formatter.py  group.py  group_cli.py  heatmap.py  hedge.py  hedge_cli.py  highlight.py  (+55 more)
tests/: test_alias.py  test_annotate.py  test_audit.py  test_baseline.py  test_bucket.py  test_cadence.py  test_cast.py  test_checkpoint.py  test_clamp.py  test_cli.py  test_cli_baseline.py  test_cli_checkpoint.py  test_cli_coalesce.py  test_cli_color.py  test_cli_columns.py  test_cli_context.py  test_cli_correlation.py  test_cli_drift.py  test_cli_export.py  test_cli_group.py  test_cli_hedge.py  test_cli_interpolate.py  test_cli_patch.py  test_cli_pivot.py  test_cli_profile.py  test_cli_rename.py  test_cli_rollup.py  test_cli_sample.py  test_cli_score.py  test_cli_slice.py  test_cli_sort.py  test_cli_split.py  test_cli_stats.py  test_cli_tag.py  test_cli_threshold.py  test_cli_tolerance.py  test_cli_transform.py  test_cli_truncate.py  test_cli_velocity.py  test_cli_watch.py  (+70 more)
